--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <title>Matt Hobbs</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this app :(.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
