--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Matt Hobbs</title>
+    <title>Matt Hobbs :)</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
